Hsm performance analysiHsm performance analysiss

--- a/stage0_preliminary/initial_research_possible_theses/bibliography.bib
+++ b/stage0_preliminary/initial_research_possible_theses/bibliography.bib
@@ -16,3 +16,11 @@ howpublished={\url{http://namecoin.info}}
   title={Decentralized Anonymous Credentials. ePrint, 2013/622, 2013},
   author={Garman, C and Green, M and Miers, I}
 }
+
+@ONLINE{hsmperformance,
+	author={Benedikt K\"oppel},
+	title={Best Practices to Securely Operate Hardware Security Modules in a High Availability Setup},
+	month = oct,
+	year = {2014},
+	howpublished={\url{ftp://ftp.tik.ee.ethz.ch/pub/students/2012-HS/SA-2012-27.pdf}}
+}
