--- a/stage0_preliminary/initial_research_possible_theses/report.tex
+++ b/stage0_preliminary/initial_research_possible_theses/report.tex
@@ -34,9 +34,7 @@ a brief problem summary, potential directions of research, threats to successful
 
 The potential subjects are:
 \begin{itemize}
-	\item Using Blockchains as a replacement for Certificate Authorities
-	\item Performance of Hardware Security Modules (HSM) for key generation and retrieval
-	\item Scheduling of interdependent jobs with not needed before time instructions
+	\item 	\item Scheduling of interdependent jobs with not needed before time instructions
 	\item Tamper-proof interaction history
 	\item Attack-resilient trust-graph collection
 	\item Dynamic trust-graph consensus
@@ -46,7 +44,7 @@ The potential subjects are:
 \end{itemize}
 
 \input{blockchain}
-
+\input{hsmperformance}
 
 \bibliography{bibliography}
 
