Tamper proof interaction history

--- a/stage0_preliminary/initial_research_possible_theses/bibliography.bib
+++ b/stage0_preliminary/initial_research_possible_theses/bibliography.bib
@@ -1,3 +1,4 @@
+%Blockchain entries
 @ONLINE{Namecoin,
 key = {Blockchain},
 month = oct,
@@ -17,6 +18,7 @@ howpublished={\url{http://namecoin.info}}
   author={Garman, C and Green, M and Miers, I}
 }
 
+%HSM Performance entries
 @ONLINE{hsmperformance,
 	author={Benedikt K\"oppel},
 	title={Best Practices to Securely Operate Hardware Security Modules in a High Availability Setup},
