--- a/stage0_preliminary/initial_research_possible_theses/blockchain.tex
+++ b/stage0_preliminary/initial_research_possible_theses/blockchain.tex
@@ -1,6 +1,6 @@
 \section{Using Blockchains as a replacement for Certificate Authorities}
 
-\subsection{Problem summary}
+\subsection*{Problem summary}
 There are currently two Public Key Infrastructures in place: Certificate Authorities and Web of Trust.
 
 The Certificate Authority system relies on the trust placed upon a central Certificate Authority.
@@ -12,7 +12,7 @@ The Web of Trust system is a decentralized approach, but still relies on meeting
 It is also difficult to join the web as a newcomer.
 So it has drawbacks of its own.
 
-\subsection{Directions of research}
+\subsection*{Directions of research}
 
 A possible solution is to adept the power of blockchain to solve this problem.
 Certifications can be moved towards the blockchain and can be verified by the network.
@@ -25,12 +25,12 @@ For a system to replace the current PKI infrastructure this has to be achieved,
 or cyber squatting would become a problem.
 This could also possibly be a direction of research; how can a distributed network to assert someone's identity.
 
-\subsection{Threats}
+\subsection*{Threats}
 The subject is very interesting, but also very new.
 This leads to the question if a substantial prototype can be achieved during the thesis.
 The threat is that the thesis would only result in a theoretical contribution.
 
-\subsection{Related work}
+\subsection*{Related work}
 Namecoin is an adaptation of Bitcoin to provide DNS services \cite{Namecoin}.
 Building upon Namecoin, a proposal named Certcoin has be done that provides PKI infrastructure\cite{fromknecht2014certcoin}.
 Further work has been published about a building a decentralized anonymous credential system\cite{garmandecentralized}
