--- a/stage0_preliminary/initial_research_possible_theses/hsmperformance.tex
+++ b/stage0_preliminary/initial_research_possible_theses/hsmperformance.tex
@@ -1,6 +1,6 @@
 \section{Performance of Hardware Security Modules for key generation and retrieval}
 
-\subsection{Problem summary}
+\subsection*{Problem summary}
 Hardware security modules (HSM) are devices that can provide extra security for digital keys and perform cryptographic functions.
 HSMs provides physical security, active detection of tampering and tampering evidence. 
 They can actively respond to tampering with for example deletion of the keys inside the device.
@@ -13,7 +13,7 @@ But the company has no prior experience with the performance of HSMs
 and they want to know what performance can be expected from the HSMs.
 Particular of interest is in how the performance scales with increase of a customer base and increase of the HSM cluster.
 
-\subsection{Directions of research}
+\subsection*{Directions of research}
 The first step of research is to empirical evaluate the performance of clustered HSMs 
 Using the evaluation proposals of improvement should be done, developed and further evaluated.
 
@@ -21,14 +21,14 @@ The growth of key length is also a possible direction of research.
 At longer key sizes the keys processed per minute by a HSM will be lower,
 but it is unknown how much statistically this slowdown factor is. 
 
-\subsection{Threats}
+\subsection*{Threats}
 \begin{itemize}
 \item Shifting priorities in the dynamic environment of the startup that will put less importance on completing the thesis.
 \item Unavailability of very expensive hardware to conduct experiments and development on.
 \item The balance between Intellectual Property, insight into pricing model of the company and the requirement of publishing the master thesis report.
 \end{itemize}
 
-\subsection{Related work}
+\subsection*{Related work}
 On the specific topic of HSM clusters is not much published.
 Some manufacturers provide simple tables of performance of a single HSM.
 Amazon AWS provides HSM clusters inside a private virtual cluster,
