--- a/stage0_preliminary/initial_research_possible_theses/report.tex
+++ b/stage0_preliminary/initial_research_possible_theses/report.tex
@@ -45,6 +45,7 @@ The potential subjects are:
 
 \input{blockchain}
 \input{hsmperformance}
+\input{tamperproofinteractionhistory}
 
 \bibliography{bibliography}
 
