--- a/stage0_preliminary/initial_research_possible_theses/topic_template.tex
+++ b/stage0_preliminary/initial_research_possible_theses/topic_template.tex
@@ -1,7 +1,7 @@
 \section{Using Blockchains as a replacement for Certificate Authorities}
 
-\subsection{Problem summary}
-\subsection{Directions of research}
-\subsection{Threats}
-\subsection{Related work}
+\subsection*{Problem summary}
+\subsection*{Directions of research}
+\subsection*{Threats}
+\subsection*{Related work}
 
