Added attacktrust and distributed key generation.

--- a/stage0_preliminary/initial_research_possible_theses/bibliography.bib
+++ b/stage0_preliminary/initial_research_possible_theses/bibliography.bib
@@ -26,3 +26,23 @@ howpublished={\url{http://namecoin.info}}
 	year = {2014},
 	howpublished={\url{ftp://ftp.tik.ee.ethz.ch/pub/students/2012-HS/SA-2012-27.pdf}}
 }
+
+%Distributed key generation
+@incollection{boneh1997efficient,
+  title={Efficient generation of shared RSA keys},
+  author={Boneh, Dan and Franklin, Matthew},
+  booktitle={Advances in Cryptology—CRYPTO'97},
+  pages={425--439},
+  year={1997},
+  publisher={Springer}
+}
+
+
+@inproceedings{gilboa1999two,
+  title={Two party RSA key generation},
+  author={Gilboa, Niv},
+  booktitle={Advances in Cryptology—CRYPTO’99},
+  pages={116--129},
+  year={1999},
+  organization={Springer}
+}
