--- a/stage0_preliminary/initial_research_possible_theses/report.tex
+++ b/stage0_preliminary/initial_research_possible_theses/report.tex
@@ -35,8 +35,6 @@ a brief problem summary, potential directions of research, threats to successful
 The potential subjects are:
 \begin{itemize}
 	\item 	\item Scheduling of interdependent jobs with not needed before time instructions
-	\item Tamper-proof interaction history
-	\item Attack-resilient trust-graph collection
 	\item Dynamic trust-graph consensus
 	\item Fuzzing of smart meters in a smart power grid
 	\item Anonymization of big data
@@ -44,8 +42,11 @@ The potential subjects are:
 \end{itemize}
 
 \input{blockchain}
-\input{hsmperformance}
 \input{tamperproofinteractionhistory}
+\input{attacktrust-graph}
+\input{hsmperformance}
+\input{keygenerationdistributed}
+
 
 \bibliography{bibliography}
 
