Finished up version 0.1

--- a/stage0_preliminary/initial_research_possible_theses/attacktrust-graph.tex
+++ b/stage0_preliminary/initial_research_possible_theses/attacktrust-graph.tex
@@ -10,10 +10,11 @@ This has been proven to stand in the way of protecting against sybil attack.
 \subsection*{Directions of research}
 A direction of research is to implement TrustGrowth.
 The algorithm uses exclusion as a defense against sybil attacks.
+The algorithm searches the graph to build up the trust network. 
 Only reports are used if they can be linked back to the host node.
 This for instances ignores unknown identities.
 
-The first step is to implement and evaluate TrustGrowth.,
+The first step is to implement and evaluate TrustGrowth with real users.
 
 \subsection*{Threats}
 This topic is proposed as a phd position at the PDS group.
