--- a/stage0_preliminary/initial_research_possible_theses/report.tex
+++ b/stage0_preliminary/initial_research_possible_theses/report.tex
@@ -19,6 +19,8 @@
 This document is a overview and analysis of possible master thesis subjects.
 The goal is to be able to receive feedback on the potential subjects from various people possible involved in the master thesis
 and ultimately choose a subject for the thesis.
+This report does not represent any work done by the author and it borrows a lot from other people.
+The report is not intended in anyway to be presented as work of the author self.
 
 The requirements for the subject of the thesis is limited:
 \begin{itemize}
@@ -31,15 +33,16 @@ but this is not a requirement of the student.
 Each of the potential subjects are discussed below.
 For each potential subject the following is discussed: 
 a brief problem summary, potential directions of research, threats to successful completion of the thesis, and related work.
+The subjects are in no particular order.
 
-The potential subjects are:
+The following potential subjects still need to be added to the current report:
 \begin{itemize}
-	\item 	\item Scheduling of interdependent jobs with not needed before time instructions
-	\item Dynamic trust-graph consensus
+	\item Online scheduling of bag of task with not needed before characteristics
 	\item Fuzzing of smart meters in a smart power grid
 	\item Anonymization of big data
 	\item Location privacy
 \end{itemize}
+The omittance of these subject should not be taken as an indication of interest for the subject.
 
 \input{blockchain}
 \input{tamperproofinteractionhistory}
