--- a/stage0_preliminary/initial_research_possible_theses/tamperproofinteractionhistory.tex
+++ b/stage0_preliminary/initial_research_possible_theses/tamperproofinteractionhistory.tex
@@ -16,9 +16,11 @@ for example the banking system.
 
 \subsection*{Directions of research}
 A direction of research would be to implement a prototype of DoubleEntry.
-This is an improvement of the blockchain concept,
-but it is distributed over several chains. 
-It is an expanding acyclic graph.
+This is an improvement of the blockchain concept.
+The history is distributed over several chains. 
+Interactions bind together chains.
+This solves the problem of one huge data structure limiting the devices that can handle the chain.
+It is in a sense an expanding acyclic graph.
 
 \subsection*{Threats}
 A very novel field proposing an improvement on the blockchain idea which itself is very new and a subject of research.
