--- a/report.tex
+++ b/report.tex
@@ -1,5 +1,10 @@
 \documentclass[a4paper]{report} 
 
+%%Graphic packages
+\usepackage{graphicx}
+%Enables [H] for figures.
+\usepackage{float}
+
 \begin{document} 
 
 
@@ -21,7 +26,7 @@
 
 
 
-\input{stage1_problemDescription/problemDescription.tex}
+\input{problemDescription/problemDescription.tex}
 
 
 
