--- a/report.tex
+++ b/report.tex
@@ -4,6 +4,10 @@
 \usepackage{graphicx}
 %Enables [H] for figures.
 \usepackage{float}
+%Cite websites
+\usepackage{url}
+
+
 
 \begin{document} 
 
@@ -31,5 +35,7 @@
 
 
 
+\bibliographystyle{plain}
+\bibliography{bibliography}
 
 \end{document}
