ProblemDescription: reworked structure.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,39 @@
+@article{Nowak-PrisonerDilemma,
+  title={The evolution of stochastic strategies in the prisoner's dilemma},
+  author={Nowak, Martin and Sigmund, Karl},
+  journal={Acta Applicandae Mathematicae},
+  volume={20},
+  number={3},
+  pages={247--265},
+  year={1990},
+  publisher={Springer}
+}
+
+
+@article{Hardin-Tragedy,
+  title={The tragedy of the commons},
+  author={Hardin, Garrett},
+  journal={science},
+  volume={162},
+  number={3859},
+  pages={1243--1248},
+  year={1968},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{Nowak-Cooperation,
+  title={Five rules for the evolution of cooperation},
+  author={Nowak, Martin A},
+  journal={science},
+  volume={314},
+  number={5805},
+  pages={1560--1563},
+  year={2006},
+  publisher={American Association for the Advancement of Science}
+}
+
+
+
 @article{Nakamoto-bitcoin,
   title={Bitcoin: A peer-to-peer electronic cash system},
   author={Nakamoto, Satoshi},
