--- a/report.tex
+++ b/report.tex
@@ -7,8 +7,6 @@
 %Cite websites
 \usepackage{url}
 
-
-
 \begin{document} 
 
 
@@ -29,9 +27,10 @@
 \maketitle
 
 
-
+%Problem description
 \input{problemDescription/problemDescription.tex}
-
+%Related Work
+\input{relatedWork/relatedWork.tex}
 
 
 
