--- a/problemDescription/problemDescription.tex
+++ b/problemDescription/problemDescription.tex
@@ -1,117 +1,83 @@
 \chapter{Problem Description}
+In a distributed system nodes will have interactions with peers.
+A node will have to decide how to react to these peers.
+Our work is beneficial to deciding how to react to these peers.
 
-The current Bitcoin protocol is depended on the block chain. 
-Using a block chain limits Bitcoin in several ways.
-These limitations on Bitcoin can be seen as the initial motivation 
-for our work to improve the block chain.
-But block chain and our improvement can be used in several other fields as well.
+In this chapter the problem will be described of reacting to peers.
+It will be explained in a simplified form.
+Using this simplification, the problem will be transformed gradually
+to the real problem faced in distributed systems today.
 
-How uses the block chain technology will be introduced first.
-After that the limitations imposed by the block chain will be explained.
-Finally an overview will be given of how block chains and our improvements can be used in other fields.
+\section{Deciding to help}
+Nodes can decide to lent aid to a peer or choose to not help a peer.
+Nodes can help each other at a cost, but the recipient of the help will receive a benefit from the help.
+In the traditional Prisoner's Dilemma\cite{Nowak-PrisonerDilemma} both nodes will benefit, if they choose to help each other.
+But if one node choose to not help, then he will receive more benefit and less cost, then if he helped.
+The node that provided the aid will now receive no benefit and only incur a cost.
+If both nodes choose to not help each other, 
+then they will both receive a cost higher then the cost of helping each other.
+This dilemma can be repeated several times with the same nodes and is the Iterated Prisoner's Dilemma.
+Each time both nodes will have to decide if it will help the other node.
 
-\section{Bitcoin}
-We will only introduce how Bitcoins uses the block chain and why it does so in such a way.
-This section is not a full explanation of the Bitcoin protocol
-and only discusses relevant parts of the Bitcoin protocol.
-The best starting point for a full explanation of Bitcoins 
-is the original paper by Nakamoto\cite{Nakamoto-bitcoin}.
-Further information and improvements can be found on the Bitcoin website\cite{Bitcoin.org-site}.
+A node wants to receive maximum benefit at a minimal cost.
+At first it might seem that a rational node will always choose to not provide aid,
+because it will never incur a cost and receive maximal benefit.
+But the other node will be reluctant to help a node if the aid is never returned.
+Simple strategies, like tit-for-tat or win-stay, lose-shift, suffice in this scenario
+and will perform well\cite{Nowak-Cooperation}.
 
-\subsection{Block Chain}
-For a currency to work, people have to be able to trust that no double spending can occur.
-With physical tokens it is impossible to double spend,
-but the guarantee is not trivial for digital currencies without a trusted third party.
-Bitcoin has multiple safe gaurds that work together to prevent double spending.
-These safe gaurds will be mentioned during the explanation of how Bitcoin works.
+In a large scale, distributed system, this dilemma occurs with every interaction between nodes.
+The node can already be familair with the peer,
+but more often the peer will be a peer the node has not interacted with before.
+A further commplication is that help is one way and can no longer be exchanged.
+This excludes the direct opportunty to barter for help or to barter for help in the future.
+The performance of the tit-for-tat or win-stay, lose-shift strategies
+quickly deterioriate in such a situation.
 
-The core of the Bitcoin protocol is the block chain.
-The block chain contains every transaction of bitcoins.
+For a node it is easier to abuse the generousity of others in this more anonymous situation.
+Nodes that help others will be penalized through the cost they incur
+and incentivized to adopt the malicious behaviour themselves.
+Nodes in general will become more reluctant to help nodes\cite{Nowak-PrisonerDilemma}.
+In the end no node will help and all nodes will receive a penalty.
+This is commonly called the Tragedy of the Commons in the literature \cite{Hardin-Tragedy}.
+The whole network will actually receive more benefit in total if everyone corporates.
+But nodes have no way of knowing if the peer they meet are willing to help.
 
-A transaction consists of three parts.
-The public key of the new owner of the bitcoin,
-the hash of combination of the previous transaction together with the public key of the new owner,
-and the signature of the hash of the current owner.
-The previous transaction is a transaction of the same bitcoin.
-The ownership of the bitcoin by the current owner can be verified
-by verifying the whole history of the bitcoin.
-A transaction is usually shortend to Tx in Bitcoin related work and is used in images in this report.
+\section{History of nodes}
 
-\begin{figure}[H]
-	\centerline{\includegraphics[scale=0.3]{problemDescription/figs/transactions.eps}}
-	\caption{Transaction chain}
-\end{figure}
+In the iterated Prisoner's Dilemma the history of the previous transactions can be used 
+to track the previous response of a node in past transactions.
+Adding a history improves the performance of even the simple strategies previously mentioned.
+%TODO: CHECK
+A history can be used to create a currency or a reputation system.
+The node providing help will receive a boost in currency or a beneficial reputation, 
+that can be used in the future to receive aid.
+In a currency system, receiving help will transfer currency to the helper.
+In a reputation system, only nodes with a sufficiently good reputation will be helped.
 
-Multiple transactions are aggregrated into a single block.
-The next block is chained to the previous block by adding the hash of the previous block.
-Transaction chains span several blocks inside the block chain.
+The currency or reputation has to be made publicy available to all nodes in the network.
+But a node publicizing to hold a certain reputation is not trustworthy.
+So a interaction history, that contains every prior interaction a node has conducted, is publicized.
+Nodes can check the interaction history and calculate the amount of currency 
+or the reputation that a node has.
+Based upon this calculation the node can decide to provide aid or not.
 
-These blocks are created by nodes in the network, so called miners.
-A miner receives transactions from other nodes in the Bitcoin network.
-But the transactions are received in a non deterministic way induced by network characteristics.
-The non deterministic nature causes blocks to differ from miner to miner.
-The order of transactions has to be agreed upon by the network to eliminate this inconsistency.
+The interaction history has to be distributed among the nodes in the network
+to become publicly available.
+Efficient distribution protocols are a difficult challenge themselves and outside the scope of our work.
+But distribution is worth mentioning, because it puts constraints on the interaction history.
+The interaction history has to be distributable in an efficient manner.
+Only if it meets this constraints, will an interaction history be usable in a distributed system.
 
-An attacker can malicously transmit transactions to double spend a bitcoin he owns or does not have.
-So every transaction is verified on arrival at a node.
-Any transaction that is invalid is just dropped by the node.
-No penalty is awarded to the malicous attacker.
+\section{Tamper-proof to facilitate thrust}
 
-Bitcoin uses election based upon Proof-Of-Work system.
-A nonce is added to every block. 
-This nonce is just a number that can be varied,
-but is only sound if the result of the hash of the whole block starts with a certain number of zeros.
+Interaction histories only prevent direct abuse of the generousity of the nodes.
+A malicious node can still try to tamper with the interaction history.
+Example of these attacks are double spending attacks.
+If the interaction history is not resilient to these types of attacks, 
+no one will trust the history as fraud can happen.
 
-\begin{figure}[H]
-        \centerline{\includegraphics[scale=0.3]{problemDescription/figs/blocks.eps}}
-        \caption{Block chain}
-\end{figure}
-
-But miners can still find a valid nonce at approximately the same time
-and notify parts of the network of their newly found block.
-This leaves the network again in an inconsisted state.
-These multiple versions of the next block attached to the previous block can be seen as branches.
-
-To solve this inconsistency, Bitcoin nodes save every branch and continue working on the longest branch.
-At first the node will favor the first received branch and continue working on that branch
-At some point one branch will become predominant in the network
-and more nodes will dedicate compute power to extend this branch in comparison to other branches.
-Blocks will be found at a faster rate for this branch
-and the branch will be adopted by the network as a whole.
-
-The amount of zeros is adjusted to compensate for the increasing speed of being able to find nonces, due to increasing computational power.
-The amount of zeros balances the probability of branches occuring
-and the time before a new block is found,
-which in turn is how fast transactions are processed.
-
-Another way to double spend a bitcoin is by sending a transaction to one part of the network,
-but to the other part of the network a transaction with a different receipient.
-It can happen that both transactions will at first be processed into a block.
-Eventually one branch will one and double spending is averted.
-
-The behaviour just described makes that a transaction can never be confirmed with full certainty.
-Another branch could possibly always over take the current longest branch.
-This also makes the system susceptible if more compute power is owned by a malicous attacker then honest node, even if it is only 51\%. 
-In the end the current branch can be overtaken
-and the whole transaction history can be rewritten by the attacker.
-Bitcoin introduces points in the chain that are to be considered final and can no longer change.
-
-\subsection{Limitations}
-In this section we will discuss the several limitations of Bitcoins
-that originate from the use of the block chain.
-
-\subsubsection{Size}
-To be able to prevent double spending and rightfull spending by the right owner, 
-the node verifying a transaction needs to be aware of the full history of a bitcoin.
-This results in that a node needs the entire block chain to verify a transaction.
-
-The block chain is an data structure ever increasing in size.
-No block or data contained in that block is removed.
-The block chain has been growing since 2009 exponantially.
-The size and growth can be seen in figure \ref{fig:bc-size}\cite{Blockchain.info-bcs}.
-
-\begin{figure}[H]
-        \centerline{\includegraphics[scale=0.6]{problemDescription/figs/bcs/blockchainsize.eps}}
-        \caption{Block chain size}
-	\label{fig:bc-size}
-\end{figure}
+Tamper-proof interaction histories prevents classes of attacks that involve altering the interaction history.
+A digital currency system builds upon trust just as much as a banknote currency.
+A system cannot be fully secure, 
+but still a reasonable certainty is required that no tampering of the interaction history can occur.
