* Fixed todo's * Problem Description: Formalized Prisoner's Dilemma

--- a/bib/bibliography.bib
+++ b/bib/bibliography.bib
@@ -32,7 +32,13 @@
   publisher={American Association for the Advancement of Science}
 }
 
-
+@inproceedings{Lai-Incentives,
+  title={Incentives for cooperation in peer-to-peer networks},
+  author={Lai, Kevin and Feldman, Michal and Stoica, Ion and Chuang, John},
+  booktitle={Workshop on economics of peer-to-peer systems},
+  pages={1243--1248},
+  year={2003}
+} 
 
 @article{Nakamoto-bitcoin,
   title={Bitcoin: A peer-to-peer electronic cash system},
