--- a/graduationdata.tex
+++ b/graduationdata.tex
@@ -3,18 +3,18 @@
 
 \noindent \textbf{Author}\\
 \begin{tabular}{l}
-TODO AUTHOR\\
+Steffan D. Norberhuis\\
 \\
 \end{tabular}\\
 \noindent \textbf{Title}\\
 \begin{tabular}{l}
-TODO TITLE\\
+DoubleEntry: Tamper-proof Interaction History\\
 \\
 \end{tabular}\\
 \noindent \textbf{MSc presentation}\\
 \begin{tabular}{l}
 % <MM> DD, YYYY (like \today)
-TODO GRADUATION DATE\\
+%TODO: #36 GRADUATION DATE\\
 \\
 \end{tabular}
 
@@ -22,7 +22,7 @@ TODO GRADUATION DATE\\
 
 \noindent \textbf{Graduation Committee}\\
 \begin{tabular}{ll}
-TODO GRADUATION COMMITTEE & Delft University of Technology \\
+%TODO: #37 GRADUATION COMMITTEE & Delft University of Technology \\
 % The order of listing the names: Graduation prof, supervisor(s), others ordered by title + alphabetical
 %examples:
 %prof. dr. ir. H. J. Sips (chair) & Delft University of Technology \\
@@ -30,7 +30,7 @@ TODO GRADUATION COMMITTEE & Delft University of Technology \\
 \end{tabular}
 
 \begin{abstract} %de abstract bevat alleen een korte samenvatting van de inhoud van het onderzoek
-TODO ABSTRACT
+%TODO: #38 Abstract
 \end{abstract}
 
 \clearpage
