--- a/thesis.tex
+++ b/thesis.tex
@@ -64,17 +64,14 @@
 \pagenumbering{arabic}
 \setcounter{page}{1}
 
-% INTRODUCTION: page 1
+
+
+
+% CHAPTERS ... For instance: History/Prior Work, Design/Implementation, Experiments
+% INTRODUCTION
 \include{introduction}
 %Problem description
 \input{problemDescription/problemDescription.tex}
-
-% CHAPTERS ... For instance: History/Prior Work, Design/Implementation, Experiments
-
-
-
-
-
 % CONCLUSIONS AND FUTURE WORK
 
 % BIBLIOGRAPHY
