--- a/titlepage.tex
+++ b/titlepage.tex
@@ -3,7 +3,8 @@
   \begin{center}
   \null\vfill
     \begin{center}
-    \LARGE{TODO TITLE}
+    \LARGE{DoubleEntry:\\
+		Tamper-proof Interaction History}
     \end{center}
 
     \vspace{3cm}
@@ -23,13 +24,13 @@
     \vspace{2.0cm}
 
     \begin{normalsize}
-    TODO AUTHOR
+    Steffan D. Norberhuis
     \end{normalsize}
 
     \vspace{1.0cm}
 
     % <MM> DD, YYYY
-    \today            %TODO: Dit is de datum van uitgifte van final versie aan de afstudeer commissie
+    \today            %TODO: #36 Dit is de datum van uitgifte van final versie aan de afstudeer commissie
 
   \vfill
   \end{center}
