--- a/frontcover.tex
+++ b/frontcover.tex
@@ -3,13 +3,14 @@
 \null\vfill
 
 \begin{center}
-\LARGE{TODO TITLE}
+\LARGE{DoubleEntry:\\ Tamper-proof Interaction History}
 \end{center}
 
 \vspace{1.5cm}
 
 \begin{center}
-TODO AUTHOR
+Steffan D. Norberhuis\\
+steffan@norberhuis.nl
 \end{center}
 
 \vfill
