Problem description: * revised sentences * added real world examples

--- a/bib/bibliography.bib
+++ b/bib/bibliography.bib
@@ -40,6 +40,36 @@
   year={2003}
 } 
 
+@inproceedings{Anderegg-AdHoc,
+  title={Ad hoc-VCG: a truthful and cost-efficient routing protocol for mobile ad hoc networks with selfish agents},
+  author={Anderegg, Luzi and Eidenbenz, Stephan},
+  booktitle={Proceedings of the 9th annual international conference on Mobile computing and networking},
+  pages={245--259},
+  year={2003},
+  organization={ACM}
+}
+
+
+@article{Adar-Freeriding,
+  title={Free riding on Gnutella},
+  author={Adar, Eytan and Huberman, Bernardo A},
+  journal={First Monday},
+  volume={5},
+  number={10},
+  year={2000}
+}
+
+
+
+@article{Maniatis-Timeline,
+  title={Secure history preservation through timeline entanglement},
+  author={Maniatis, Petros and Baker, Mary},
+  journal={arXiv preprint cs/0202005},
+  year={2002}
+}
+
+
+
 @article{Nakamoto-bitcoin,
   title={Bitcoin: A peer-to-peer electronic cash system},
   author={Nakamoto, Satoshi},
