Related Work: * added to thesis.tex

--- a/thesis.tex
+++ b/thesis.tex
@@ -72,7 +72,9 @@
 \include{introduction}
 %Problem description
 \input{problemDescription/problemDescription.tex}
-% CONCLUSIONS AND FUTURE WORK
+%Related work
+\input{relatedWork/relatedWork}
+
 
 % BIBLIOGRAPHY
 \bibliographystyle{bib/latex8}
